# echostor-security-posture-tool

./: .gitignore  ADMIN_SETUP.md  CONTRIBUTING.md  DEPLOYMENT_FORCE.md  README.md  REMEDIATION_PLAN.md  TESTING.md  docker-compose.yml  package.json  pnpm-lock.yaml  pr_description.md  vercel.json
backend/: .env.example  .gitignore  Dockerfile  README.md  REPORTS_STORAGE.md  alembic.ini  check_admin.py  create_admin.py  fly.toml  pyproject.toml  setup_admin.py  sitecustomize.py  test.db  update_admin_user.py
backend/app/: main.py
backend/app/api/: admin.py  assessment.py  auth.py  health.py  intake.py  openai_keys.py  reports.py
backend/app/core/: assessment_tiers.py  config.py  database.py  scoring_scales.py  security.py
backend/app/db/: __init__.py  types.py
backend/app/middleware/: csrf.py  performance.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  ai_artifacts.py  ai_cache.py  ai_daily_metrics.py  ai_metadata.py  assessment.py  intake.py  openai_key.py  user.py
backend/app/resources/: benchmarks.yaml
backend/app/schemas/: __init__.py  ai_artifacts.py  assessment.py  intake.py  openai_key.py  report.py  user.py
backend/app/services/: ai_cache.py  ai_synthesis.py  benchmark_context.py  cache.py  enhanced_context_extractor.py  intake_prompt_builder.py  intake_service.py  metrics.py  openai_key_manager.py  pii_redactor.py  prompt_builder.py  question_parser.py  report_generator.py  security_metrics.py  storage.py
backend/app/utils/: datetime_utils.py  encryption.py  pagination.py
backend/data/: sections_metadata.json  security_assessment_questions.md
backend/migrations/: 001_add_assessment_response_indexes.sql  README.md  env.py
backend/migrations/versions/: 0c55c907445b_convert_admin_audit_log_details_to_jsonb.py  1760707473_add_unique_constraint_assessment_responses.py  1761546662_add_unique_constraint_reports.py  1762153457_add_selected_section_ids_to_assessments.py  1763254371_migrate_option_values_to_slugs.py  1763376500_add_composite_index_assessments_user_status.py  1763463955_add_assessment_intake_sessions_table.py  2d4eb9575cd4_initial_database_schema.py  2da9d700c89f_add_ai_generation_metadata_table.py  3f8a9b2c1d5e_add_timestamps_to_assessments.py  575105e0b6ed_merge_heads_after_phase_3b_and_attempt_.py  6a3e3285b47f_convert_answer_value_to_jsonb.py  9a260f32567c_add_ai_section_cache_table.py  9cbe6669eb84_add_is_admin_column_to_users.py  a1b2c3d4e5f6_add_finish_reason_to_ai_generation_metadata.py  a7ce31896fc5_add_is_protected_to_users.py  b54945bdeede_add_database_indexes.py  bc346a53805b_add_assessment_response_indexes.py  c43ef74ad323_add_ai_section_artifacts_table.py  d1e2f3a4b5c6_add_comment_and_consultation_fields.py  d5f251975256_add_openai_api_keys_table.py  e1f2g3h4i5j6_add_synthesis_artifacts_daily_metrics_and_enhanced_metadata.py  ea99a564b1f9_merge_migration_heads_after_pr_174_and_.py  f1a2b3c4d5e6_add_attempt_number_to_assessments.py
backend/scripts/: apply_phase4_updates.py  dry_run_migration.py  frequency_inconsistencies_report.txt  generate_slug_mappings.py  identify_frequency_inconsistencies.py  identify_missing_options.py  lint_questionnaire.py  missing_options_report.txt  question_linter.py  slug_mappings.csv  slug_mappings.json  update_markdown_with_slugs.py  validate_migration.py
backend/tests/: conftest.py  test_admin.py  test_admin_endpoints.py  test_ai_services.py  test_assessment.py  test_assessment_endpoints.py  test_assessment_tiers.py  test_auth.py  test_cache.py  test_enhanced_context_extractor.py  test_health_endpoints.py  test_intake.py  test_integration.py  test_openai_key_manager.py  test_pagination.py  test_permissions.py  test_pii_redaction.py  test_question_parser.py  test_rate_limiting.py  test_report_generator.py  test_reports_endpoints.py  test_scoring_v2.py  test_validation.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  TROUBLESHOOTING.md
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile.dev  README.md  eslint.config.mjs  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tsconfig.json  vercel.json
scripts/: setup.sh
tests/: QUICK_START.md  README.md  config.py  pytest.ini  requirements.txt  run_tests.py
(+58 files in other folders)
