[tool.poetry]
name = "echostor-security-posture-backend"
version = "0.1.0"
description = "Backend API for EchoStor Security Posture Assessment Tool"
authors = ["EchoStor Technologies <aadish.bahati@echostor.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
pydantic = {extras = ["email"], version = "^2.5.0"}
pydantic-settings = "^2.1.0"
openai = "^1.3.7"
weasyprint = "^60.2"
jinja2 = "^3.1.2"
reportlab = "^4.0.7"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
slowapi = "^0.1.9"
redis = "^5.0.1"
sentry-sdk = {extras = ["fastapi"], version = "^2.0.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
black = "^23.11.0"
isort = "^5.12.0"
ruff = "^0.13.3"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=80 -v"

[tool.coverage.run]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*", "*/conftest.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/**/*.py" = ["F403"]
"tests/conftest.py" = ["E402"]
