[tool.poetry]
name = "echostor-security-posture-backend"
version = "0.1.0"
description = "Backend API for EchoStor Security Posture Assessment Tool"
authors = ["EchoStor Technologies <aadish.bahati@echostor.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.2"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
sqlalchemy = "^2.0.44"
alembic = "^1.17.2"
psycopg2-binary = "^2.9.11"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic = {extras = ["email"], version = "^2.12.4"}
pydantic-settings = "^2.12.0"
openai = "^2.8.0"
weasyprint = "^66.0"
pydyf = "^0.11.0"
jinja2 = "^3.1.2"
reportlab = "^4.4.4"
python-dotenv = "^1.2.1"
httpx = "^0.28.1"
slowapi = "^0.1.9"
redis = "^7.0.1"
sentry-sdk = {extras = ["fastapi", "sqlalchemy"], version = "^2.44.0"}
tenacity = "^9.1.2"
markdown2 = "^2.5.4"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
pytest-mock = "^3.15.1"
black = "^25.11.0"
isort = "^7.0.0"
ruff = "^0.14.5"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=app --cov-report=term-missing --cov-report=html --cov-fail-under=75 -v"

[tool.coverage.run]
omit = ["*/tests/*", "*/migrations/*", "*/__pycache__/*", "*/conftest.py"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "weasyprint",
    "pydyf",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "C4",
]
ignore = [
    "E501",
    "B008",
    "B904",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"migrations/**/*.py" = ["F403"]
"tests/conftest.py" = ["E402"]
